--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ missao {
    font-size: 20px;
 }
 
-#imagem1 {
+#mirella.jpg {
     width: 100%
 }
 
@@ -23,6 +23,6 @@ missao {
 }
 
 #imagem3 {
-    width: 100%
+    
 }
 
